# Finance_Manager

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/finance_tracker/: __init__.py  config.py
src/finance_tracker/cli/: __init__.py  app.py  rendering.py
src/finance_tracker/domain/: __init__.py  enums.py  models.py
src/finance_tracker/repositories/: __init__.py  base.py  exceptions.py  json_repo.py
src/finance_tracker/services/: __init__.py  transaction_service.py
tests/: conftest.py  test_cli.py  test_domain.py  test_json_repo.py  test_service.py
