[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal finance tracker - a mentoring project showcasing modern Python (2026) backend architecture."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Finance Tracker Mentoring" }]
keywords = ["finance", "cli", "fastapi-prep", "mentoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
finance = "finance_tracker.cli.app:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_tracker"]

# --- Ruff: linter + formatter (zastępuje black, isort, flake8, pyupgrade) -----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "TID",  # tidy imports
    "C90",  # mccabe complexity
    "PL",   # pylint
    "PTH",  # use pathlib
    "ERA",  # no commented-out code
    "TCH",  # type-checking imports
    "ANN",  # type annotations
]
ignore = [
    "ANN401",  # Dynamic types (Any) sometimes justified
    "PLR0913", # Too many arguments (DI has many)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Mypy: strict static typing ------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_decorators = true
pretty = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# --- Pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=finance_tracker",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["finance_tracker"]
